[package]
name = "rantz_spatial2d"
version = "0.3.8"
authors = ["Robert Gardner'"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/BobG1983/rantz_spatial2d"
homepage = "https://github.com/BobG1983/rantz_spatial2d"
keywords = ["gamedev", "bevy"]
categories = ["game-engines"]
description = "A set of 2D spatial utilities for Bevy, including handling transform propogation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bevy"]
bevy = ["bevy/bevy_render"]
serde = ["dep:serde"]

[profile.dev]
opt-level = 1

[dependencies]
serde = { version = "1.0.203", features = ["derive"], optional = true }
bevy = { version = "0.13.2", default-features = false, optional = true }
