[package]
name = "rantz_spatial2d"
version = "3.0.0"
authors = ["Robert Gardner'"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/BobG1983/rantz_spatial2d"
homepage = "https://github.com/BobG1983/rantz_spatial2d"
keywords = ["gamedev", "bevy"]
categories = ["game-engines"]
description = "A set of 2D spatial utilities for Bevy, including handling transform propagation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serde = ["dep:serde"]

[profile.dev]
opt-level = 1

[dependencies]
serde = { version = "1.0.203", features = ["derive"], optional = true }
bevy = "0.14.0"
